kustomize/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cherrypick-dev
  namespace: cherrypick
spec:
  selector:
    matchLabels:
      name: cherrypick-dev
  template:
    metadata:
      labels:
        name: cherrypick-dev
    spec:
      containers:
      - name: cherrypick-dev
        image: juunini/cherrypick:dev
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "2Gi"
            cpu: "1"
        volumeMounts:
        - name: creds
          mountPath: /etc/gcp
          readOnly: true
        - name: config
          mountPath: /cherrypick/.config
          readOnly: true
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP
        securityContext:
          privileged: true
          capabilities:
            add:
              - SYS_ADMIN
        livenessProbe:
          httpGet:
            path: /.well-known/nodeinfo
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /.well-known/nodeinfo
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 1
        startupProbe:
          httpGet:
            path: /.well-known/nodeinfo
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 1
        lifecycle:
          postStart:
            exec:
              command: ["gcsfuse", "-o", "allow_other", "yodangang-express", "/cherrypick/files"]
          preStop:
            exec:
              command: ["fusermount", "-u", "/cherrypick/files"]
      volumes:
        - name: creds
          secret:
            secretName: gcloud
            items:
            - key: creds
              path: creds.json
        - name: config
          secret:
            secretName: cherrypick-dev
            items:
            - key: config
              path: default.yml
