kustomize/dev/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-dev
  namespace: cherrypick
spec:
  selector:
    matchLabels:
      name: redis-dev
  template:
    metadata:
      labels:
        name: redis-dev
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: redis-dev
                operator: In
                values:
                  - "true"
      containers:
      - name: redis-dev
        image: redis:7.2.4-alpine3.19
        resources:
          requests:
            memory: "0.5Gi"
            cpu: "500m"
          limits:
            memory: "0.5Gi"
            cpu: "500m"
        ports:
          - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: redis-dev
  namespace: cherrypick
  labels:
    name: redis-dev
spec:
  selector:
    name: redis-dev
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
