kustomize/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cherrypick-dev
  namespace: cherrypick
spec:
  selector:
    name: cherrypick-dev
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
    - protocol: TCP
      name: https
      port: 443
      targetPort: 3000
